--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
     "helmet": "^7.1.0",
     "puppeteer": "^22.10.0"
   }
