--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,11 @@
     {
       "src": "server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "routes/**/*.js",
+      "use": "@vercel/node"
     }
   ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/server.js"
-    }
-  ]
+  "routes": [{ "src": "/api/(.*)", "dest": "/server.js" }]
 }
