--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
     "helmet": "^7.1.0",
+    "node-cron": "^3.0.3",
     "puppeteer": "^22.10.0"
   }
 }
