--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "emailjs-com": "^3.2.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
     "helmet": "^7.1.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.13",
     "puppeteer": "^22.10.0"
   }
 }
