--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
       "use": "@vercel/node"
     },
     {
+      "src": "server2.js",
+      "use": "@vercel/node"
+    },
+    {
       "src": "routes/**/*.js",
       "use": "@vercel/node"
     }
