--- a/vercel.json
+++ b/vercel.json
@@ -5,11 +5,13 @@
       "src": "server.js",
       "use": "@vercel/node"
     },
-
     {
       "src": "routes/**/*.js",
       "use": "@vercel/node"
     }
   ],
-  "routes": [{ "src": "/api/(.*)", "dest": "/server.js" }]
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/server.js" },
+    { "src": "/(.*)", "dest": "/server.js" }
+  ]
 }
