--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-rate-limit": "^7.3.1",
     "helmet": "^7.1.0",
     "node-cron": "^3.0.3",
+    "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
     "puppeteer": "^22.10.0",
