--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "path": "^0.12.7",
     "puppeteer": "^22.10.0",
     "twilio": "^5.2.0",
+    "twitter-api-v2": "^1.17.2",
     "ws": "^8.17.0"
   }
 }
