--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Check Recent Scores Endpoint
         run: |
           echo "🔍 Checking /api/cricket/recent-scores..."
-          response=$(curl -s -o /dev/null -w "%{http_code}" https://${{ secrets.VERCEL_DOMAIN || 'your-api.vercel.app' }}/api/cricket/recent-scores)
+          response=$(curl -s -o /dev/null -w "%{http_code}" https://api-sync.vercel.app/api/cricket/recent-scores)
           if [ $response -eq 200 ]; then
             echo "✅ Recent scores endpoint is healthy"
           else
@@ -27,7 +27,7 @@ jobs:
       - name: Check Live Scores Endpoint
         run: |
           echo "🔍 Checking /api/cricket/live-scores..."
-          response=$(curl -s -o /dev/null -w "%{http_code}" https://${{ secrets.VERCEL_DOMAIN || 'your-api.vercel.app' }}/api/cricket/live-scores)
+          response=$(curl -s -o /dev/null -w "%{http_code}" https://api-sync.vercel.app/api/cricket/live-scores)
           if [ $response -eq 200 ]; then
             echo "✅ Live scores endpoint is healthy"
           else
@@ -38,7 +38,7 @@ jobs:
       - name: Check Upcoming Matches Endpoint
         run: |
           echo "🔍 Checking /api/cricket/upcoming-matches..."
-          response=$(curl -s -o /dev/null -w "%{http_code}" https://${{ secrets.VERCEL_DOMAIN || 'your-api.vercel.app' }}/api/cricket/upcoming-matches)
+          response=$(curl -s -o /dev/null -w "%{http_code}" https://api-sync.vercel.app/api/cricket/upcoming-matches)
           if [ $response -eq 200 ]; then
             echo "✅ Upcoming matches endpoint is healthy"
           else
