--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "scrape:cricbuzz": "node scrapers/cricbuzz-news-scraper.js"
   },
   "keywords": [
     "cricket",
@@ -19,6 +20,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "@upstash/redis": "^1.35.8",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
@@ -29,6 +32,8 @@
     "express-rate-limit": "^7.3.1",
     "helmet": "^7.1.0",
     "path": "^0.12.7",
+    "pg": "^8.16.3",
+    "prisma": "^7.1.0",
     "puppeteer": "^22.15.0",
     "ws": "^8.17.0"
   }
