--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "scrape:cricbuzz": "node scrapers/cricbuzz-news-scraper.js"
+    "scrape:cricbuzz": "node scrapers/cricbuzz-news-scraper.js",
+    "postinstall": "prisma generate"
   },
   "keywords": [
     "cricket",
