--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@sparticuz/chromium": "^143.0.0",
     "@upstash/redis": "^1.35.8",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
@@ -36,6 +37,7 @@
     "pg": "^8.16.3",
     "prisma": "^7.1.0",
     "puppeteer": "^22.15.0",
+    "puppeteer-core": "^24.33.0",
     "ws": "^8.17.0"
   }
 }
