Fix: Add env vars to npm install for Prisma generate

--- a/.github/workflows/scrape-cricket-news.yml
+++ b/.github/workflows/scrape-cricket-news.yml
@@ -20,6 +20,9 @@ jobs:
           cache: 'npm'
       
       - name: Install dependencies
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DIRECT_URL: ${{ secrets.DIRECT_URL }}
         run: npm install
       
       - name: Install Chromium dependencies
