Add Perplexity AI auto-tagging for SEO
- Added utils/perplexityTagger.js for AI tag generation
- Added scripts/backfill-tags.js for existing articles
- Integrated auto-tagging into run-scraper.js
- Added PERPLEXITY_API_KEY to GitHub Actions workflow

--- a/.github/workflows/scrape-cricket-news.yml
+++ b/.github/workflows/scrape-cricket-news.yml
@@ -34,6 +34,7 @@ jobs:
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           DIRECT_URL: ${{ secrets.DIRECT_URL }}
+          PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
         run: |
           echo "🏏 Starting Cricbuzz news scraper..."
           node scrapers/run-scraper.js
