debug: add content duplicate detection script

--- a/.github/workflows/scrape-cricket-news.yml
+++ b/.github/workflows/scrape-cricket-news.yml
@@ -54,3 +54,9 @@ jobs:
           echo "✅ Scraping completed!"
           echo "Articles are now in Supabase database"
           echo "API endpoint: https://api-sync.vercel.app/api/cricket/news"
+
+      - name: Debug - Check for duplicate content
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DIRECT_URL: ${{ secrets.DIRECT_URL }}
+        run: node scripts/debug-content.js
