feat: add robust health check with validation, metrics and alerts
- Track healthy/null/short/suspicious content
- Calculate health score (0-100%)
- Detect duplicate content patterns
- Fail workflow if health score < 50%

--- a/.github/workflows/scrape-cricket-news.yml
+++ b/.github/workflows/scrape-cricket-news.yml
@@ -55,7 +55,7 @@ jobs:
           echo "Articles are now in Supabase database"
           echo "API endpoint: https://api-sync.vercel.app/api/cricket/news"
 
-      - name: Debug - Check for duplicate content
+      - name: Health Check
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           DIRECT_URL: ${{ secrets.DIRECT_URL }}
