feat: Add ESPN Cricinfo news scraper with DB integration
- Add ESPN Cricinfo scraper using axios + cheerio
- Add DB runner with content validation (min 100 chars, 20 words)
- Skip articles without proper content
- Duplicate checking via sourceId
- Update GitHub Actions to run both scrapers

--- a/.github/workflows/scrape-cricket-news.yml
+++ b/.github/workflows/scrape-cricket-news.yml
@@ -32,7 +32,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y chromium-browser || sudo snap install chromium
       
-      - name: Run scraper and populate database
+      - name: Run Cricbuzz scraper
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           DIRECT_URL: ${{ secrets.DIRECT_URL }}
@@ -40,6 +40,15 @@ jobs:
         run: |
           echo "🏏 Starting Cricbuzz news scraper..."
           node scrapers/run-scraper.js
+
+      - name: Run ESPN Cricinfo scraper
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DIRECT_URL: ${{ secrets.DIRECT_URL }}
+          PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
+        run: |
+          echo "🏏 Starting ESPN Cricinfo news scraper..."
+          node scrapers/run-espncricinfo-scraper.js
 
       - name: Prune old articles
         env:
