chore: Add scraper output files to .gitignore
- Ignore *-latest-news.json files
- Ignore *_enriched*.json files
- Ignore temp_*.json files
- Removes generated data from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ Thumbs.db
 .vercel
 
 /generated/prisma
+
+# Scraper output files (generated data)
+*-latest-news.json
+*_enriched*.json
+temp_*.json
