fix: add cleanup step for stale articles with NULL content
- Added cleanup-stale.js to remove articles with NULL/empty content
- These occur when Cricbuzz redirects URLs to different articles
- Workflow now cleans up stale articles before each scrape run

--- a/.github/workflows/scrape-cricket-news.yml
+++ b/.github/workflows/scrape-cricket-news.yml
@@ -32,6 +32,12 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y chromium-browser || sudo snap install chromium
       
+      - name: Cleanup stale articles
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DIRECT_URL: ${{ secrets.DIRECT_URL }}
+        run: node scripts/cleanup-stale.js
+
       - name: Run Cricbuzz scraper
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
