--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
     "helmet": "^7.1.0",
+    "node-cache": "^5.1.2",
+    "p-limit": "^7.2.0",
     "path": "^0.12.7",
     "pg": "^8.16.3",
     "prisma": "^7.1.0",
