feat: Enhance cricket scores API with additional data fields
- Add matchFormat, venue, day, session, target, lead, trail, winner fields
- Add caching (5min TTL), retry logic, health monitoring to upcomingMatches.js
- Add concurrency limiting (max 3 parallel) to liveScoresNew.js scorecard fetching
- Create concurrency-limiter.js utility (CommonJS compatible)
- Create match-parser.js utility for shared parsing logic
- Update CRICKET_API.md with comprehensive documentation
- Fix winner extraction regex for multi-word team names
- Improve Cricbuzz news scraper with multi-scroll for infinite scroll pages
- Clean up debug/test files and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ Thumbs.db
 *-latest-news.json
 *_enriched*.json
 temp_*.json
-# Scraped data files
-cricbuzz-latest-news.json
-espncricinfo-puppeteer-results.json
+*-results.json
+*.html
+!public/*.html
+cricbuzz-page.png
