Add batch processing tests and content normalization utility
- Implemented `batch-enhance-test.js` for testing batch content enhancement via ChatGPT.
- Created `chatgpt-automation-test.js` for end-to-end testing of ChatGPT web automation with data from Supabase.
- Developed `contentNormalizer.js` utility to standardize content from various sources into a consistent markdown format.
- Enhanced human-like interaction in Puppeteer scripts for better simulation of user behavior.
- Added error handling and logging for improved debugging and test result visibility.

--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "prisma": "^7.1.0",
     "puppeteer": "^24.33.0",
     "puppeteer-core": "^24.33.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "ws": "^8.17.0"
   }
 }
