feat: Add Tweet Worker for auto-posting enhanced articles to Twitter
- Implemented tweet-worker.js to query and post untweeted enhanced articles.
- Added anti-ban protection with daily limits and randomized tweet delays.
- Integrated database operations using Prisma and PostgreSQL.
- Created twitter-service.js for handling Twitter API interactions, including tweet formatting and posting.
- Added Discord notifications for posted tweets.
- Introduced cleanup-logs.sh script for managing log files and preventing disk space issues.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "puppeteer-core": "^24.33.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "twitter-api-v2": "^1.28.0",
     "ws": "^8.17.0"
   }
 }
