fix: production hardening — 9 fixes across infrastructure, security, and performance
## P0 — Critical Infrastructure
- Redis: maxmemory 128MB + allkeys-lru eviction (CONFIG SET, persisted)
- PostgreSQL: pool max:5, connect timeout 5s, idle timeout 30s

## P1 — Stability
- Security: hardcoded API key → ANTIGRAVITY_API_KEY env var
- Concurrency: scorecard enrichment limited to 5 concurrent requests
- Redis: KEYS → SCAN iterator in cache invalidation (non-blocking)

## P2 — Memory
- Image proxy cache TTL: 30 days → 24 hours

## P3 — Hygiene
- Graceful shutdown: closes Redis clients + Prisma + PG pool on SIGTERM
- Cache HIT/MISS/SET/DELETE logs gated behind NODE_ENV != production
- pointsTableData warnings gated behind debug flag (clears PM2 error log)

## Documentation
- gemini.md: updated with all hardening changes and new architecture details
- API_USAGE.md: updated model list, examples, and v2.7.6 features

Verified: 18/18 endpoints pass, PM2 error log clean (0 lines)

--- a/package.json
+++ b/package.json
@@ -30,10 +30,9 @@
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@sparticuz/chromium": "^143.0.0",
-    "@upstash/redis": "^1.35.8",
+    "ioredis": "^5.6.1",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
-    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
