fix: production hardening + ARM64 scraper compatibility
Security:
- Bind server.js to 127.0.0.1 (was 0.0.0.0)
- Disable health-check workflow (api-sync.vercel.app is dead)
- Disable warm-cache workflow (cache warmed by live-score-worker)

ARM64 Compatibility:
- Fix all 5 scrapers to detect system Chromium on ARM64
- Priority: CHROME_PATH env → system chromium-browser → bundled Chrome
- Fixes: bbc, cricbuzz, espncricinfo, icc, iplt20 scrapers

Docs:
- Update gemini.md with Oracle Cloud migration details

--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -1,11 +1,10 @@
 name: API Health Check
+# DISABLED: api-sync.vercel.app is dead (402). API is internal-only on Oracle VPS.
+# Re-enable when a public API domain (e.g. drop.urtechy.com) is configured.
 
 on:
-  # Run every 6 hours to monitor API health
-  schedule:
-    - cron: '0 */6 * * *'
-  
-  # Allow manual triggering
+  # schedule:
+  #   - cron: '0 */6 * * *'
   workflow_dispatch:
 
 jobs:
